# gasless-bridge

./: .gitignore  Cargo.toml  README.md  dfx.json  package-lock.json
.dfx/local/: canister_ids.json
.dfx/local/canisters/gasless-bridge/: index.js  service.did.d.ts  service.did.js
.dfx/local/canisters/idl/: uxrrr-q7777-77774-qaaaq-cai.did
.dfx/network/local/: network-id  replica-effective-config.json
.dfx/network/local/state/replicated_state/17ee969f4d56997f3cb9c0221c0f3f903d631a7c1a552782824808c315d8356a/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/6e655e8caf4623e62de63754a2fd2a8cb2621c5a7899ed82efdcadb73a866cf5/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/a6dfc52868e089ed1e5e5484e117df14d0f76fe21bde22e7555ed6a02f999124/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/afaae1e3a02bd8ec832ab318fa2ef257e7ab791b06d8c4da04488deddef3339c/: states_metadata.pbuf
.dfx/network/local/state/replicated_state/f3e0a9711469429c3d961cd911fea7495e3919476b8d5de66cba203f05d9a734/: states_metadata.pbuf
config/: development.toml
frontend/: .gitignore  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
frontend/src/: App.tsx  index.css  main.tsx
frontend/src/components/: Footer.tsx  LoadingSpinner.tsx  Navigation.tsx
frontend/src/components/3d/: BridgeBackground.tsx
frontend/src/components/pages/: BridgePage.tsx  DocsPage.tsx  HomePage.tsx  StatsPage.tsx
frontend/src/hooks/: useAuth.ts  useCanisterStore.ts
frontend/src/services/: auth.services.ts  bridge.services.ts
frontend/src/stores/: bridge.store.ts
gasless-bridge/: AbdelrahmanEmad_Report_16-17-8.md  AbdelrahmanEmad_Report_21-28-8.md  AbdelrahmanEmad_Report_28-8-3-9.md  Cargo.toml  README.md  dfx.json
gasless-bridge/config/: production.toml
gasless-bridge/scripts/: deploy.sh  setup_env.sh
gasless-bridge/src/: Cargo.toml  lib.rs
gasless-bridge/src/services/: chain_key_tokens.rs  gas_estimator.rs  icp_ledger.rs  mod.rs  price_feeds.rs  rpc_cache.rs  rpc_client.rs  threshold_ecdsa.rs
gasless-bridge/src/storage/: mod.rs  professional_state.rs  stable.rs  state.rs
gasless-bridge/src/tests/: edge_case_tests.rs  integration_tests.rs  mod.rs  performance_tests.rs  security_tests.rs  unit_tests.rs
gasless-bridge/src/types/: audit_log.rs  icp_payment.rs  mod.rs  quote.rs  settlement.rs  sponsorship.rs  transfer.rs  user_transaction.rs
scripts/: test_rpcs.sh
src/: Cargo.toml  gasless-bridge.did  lib.rs
src/gasless-bridge/: Cargo.toml
src/gasless-bridge-backend/: Cargo.toml
src/gasless-bridge/src/: lib.rs
src/gasless-bridge/src/types/: errors.rs
src/gasless-bridge/src/utils/: config.rs  logging.rs
src/handlers/: mod.rs
src/services/: eth_transaction.rs  gas_estimator.rs  mod.rs  rpc_client.rs
src/storage/: mod.rs  state.rs
src/tests/: chain_key_tests.rs  mod.rs
src/types/: mod.rs  quote.rs  settlement.rs  transfer.rs
(+14 files in other folders)
