[package]
name = "gasless-bridge"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
# Core ICP dependencies
candid = "0.10"
ic-cdk = "0.12"
ic-cdk-timers = "0.6"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Utilities
hex = "0.4"
anyhow = "1.0"
