[workspace]
resolver = "2"
members = [
    "gasless-bridge",
]

[workspace.dependencies]
# Common dependencies can be defined here
ic-cdk = "0.11"
ic-cdk-macros = "0.9"
candid = "0.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[profile.release]
opt-level = 3
lto = true
strip = true
