[workspace]
members = [
    "src/gasless-bridge",
]

[workspace.dependencies]
candid = "0.10"
ic-cdk = "0.12"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"
libsecp256k1 = "0.7"
anyhow = "1.0"
thiserror = "1.0"
time = { version = "0.3", features = ["serde", "macros"] }
ic-stable-structures = "0.6"
toml = "0.8"
validator = { version = "0.16", features = ["derive"] }

